Fixed Some Errors And Bugs : About Us (The Team Bug), Home Page (Last Section Collaps Bug)

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
     position: relative;
     z-index: 2;
     height: 2.75rem;
+    width: 100%;
     overflow-y: hidden;
 }
 
